All Blog details page are now loading dynamically

--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "framer-motion": "^12.16.0",
+    "gray-matter": "^4.0.3",
     "next": "15.3.3",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-prism-plus": "^2.0.1",
+    "rehype-slug": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
